Part5/Exercise 5.02 Project, the Service Mesh Edition/manifests/todo-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: todo-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-app
  strategy:
    canary:
      steps:
        - setWeight: 50
        - pause: { duration: 5m }
        - analysis:
            templates:
              - templateName: cpu-usage-check
        - setWeight: 100
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
      - name: todo-app
        image: anonymous92/node-webserver:latest
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 10
        resources:
          requests:
            memory: "80Mi"
            cpu: "50m"
          limits:
            memory: "120Mi"
            cpu: "100m"
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: image-cache
          mountPath: /shared
      volumes:
      - name: image-cache
        emptyDir: {}
