Part5/Exercise 5.02 Project, the Service Mesh Edition/manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend
  namespace: default
spec:
  selector:
    app: todo-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
