Part5/Exercise 5.02 Project, the Service Mesh Edition/manifests/broadcaster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-broadcaster
  namespace: default
spec:
  selector:
    app: todo-broadcaster
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
