Part5/Exercise 5.02 Project, the Service Mesh Edition/manifests/todo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  namespace: default
spec:
  selector:
    app: todo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
